# ConsoleCalculatorCPP

./: .gitignore  CMakeLists.txt  ConsoleCalculator.cpp  ConsoleCalculator_V3.cpp  ConsoleCalculator_V3.sln  ConsoleCalculator_V3.vcxproj  ConsoleCalculator_V3.vcxproj.filters  Makefile  READM  README  README.md
cplusplus/: calc.cpp
cpp/: Makefile  calc.cc  calc.cpp
rust/: calc.rs
